--- a/css/style.css
+++ b/css/style.css
@@ -39,22 +39,12 @@ table {
     color: #FFFFFF;
     font-size: xxx-large;
     text-align: center;
+    padding: 1em;
 }
 
-th {
+th, tr, td {
     border: 10px solid #000000;
-    padding: 5px;
-
-}
-tr {
-    border: 5px solid #000000;
-    padding: 5px;
-
-}
-
-td {
-    border: 5px solid #FFFFFF;
-    padding: 10px;
+    padding: 1em;
 }
 
 a:link {
