--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -45,7 +45,6 @@ section {
 section:nth-of-type(1) {
     height: 3em;
     background: lightgreen;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
@@ -60,11 +59,11 @@ section:nth-of-type(1) div:last-child {
 }
 
 .purple-box:nth-of-type(1) {
-    flex-grow: 4;
+    flex-grow: 2;
 }
 
 .purple-box:nth-of-type(2) {
-    flex-grow: 2;
+    flex-grow: 1;
 }
 
 .blue-box {
@@ -74,13 +73,11 @@ section:nth-of-type(1) div:last-child {
 }
 
 section:nth-of-type(3) {
-    justify-content: flex-end;
+    align-items: center;
 }
 
 section:nth-of-type(3) h3 {
-    flex-grow: 4;
-    align-self: center;
-
+    flex-grow: 1;
 }
 
 .orange-circle {
@@ -95,7 +92,7 @@ section:nth-of-type(3) h3 {
     height: 5em;
     width: 5em;
     background: brown;
-    flex-grow: 2;
+    flex-basis: 50%;
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -117,7 +114,6 @@ section:nth-of-type(6) {
     height: 14em;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-content: space-around;
     align-items: center;
 }
 
