--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -19,7 +19,9 @@ a {
 .container {
     max-width: 750px;
     margin: 0 auto;
-    /* TODO: Make this a flex container and align it's items to the center*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
@@ -28,7 +30,7 @@ a {
     padding: 20px;
     border-radius: 4px;
     text-align: center;
-    /*  TODO: Change this flex items basis to 100% of the page  */
+    flex-basis: 100%;
 }
 
 .card-title {
