--- a/css/flexbox-footer-exercise.css
+++ b/css/flexbox-footer-exercise.css
@@ -1,9 +1,10 @@
 * {
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body {
-    margin: 0;
-    font-family: "Nunito Sans", SansSerif;
+    box-sizing: border-box;
+    font-family: Arial, Ubuntu, sans-serif;
     min-height: 100vh;
 }
 footer {
