--- a/css/mapbox_maps_api.css
+++ b/css/mapbox_maps_api.css
@@ -5,8 +5,7 @@
 
 #map {
     border: 3px solid black;
-    margin: 5em 1em;
-    border-radius: 100%;
-    height: 40vh;
-    width: 90vw;
+    margin: .5em 1em;
+    height: 50vh;
+    width: 98vw;
 }
